--- a/src/App.css
+++ b/src/App.css
@@ -1,105 +1,135 @@
-*{
-  font-family: 'Roboto', sans-serif;
+* {
+  font-family: "Roboto", sans-serif;
 }
-.fs_14{
+.fs_14 {
   font-size: 14px;
 }
-.fs_18{
+.fs_18 {
   font-size: 18px;
 }
-.fs_19{
+.fs_19 {
   font-size: 19px;
 }
-.fs_22{
+.fs_22 {
   font-size: 22px;
 }
-.fs_23{
+.fs_23 {
   font-size: 23px;
 }
-.fs_43{
+.fs_43 {
   font-size: 43px;
 }
-.fs_20{
+.fs_20 {
   font-size: 20px;
 }
-.fs_55{
+.fs_55 {
   font-size: 61px;
 }
-.fw_300{
+.fw_300 {
   font-weight: 300;
 }
-.fw_400{
+.fw_400 {
   font-weight: 400;
 }
-.fw_500{
+.fw_500 {
   font-weight: 500;
 }
-.fw_700{
+.fw_700 {
   font-weight: 700;
 }
-.bg_gray{
-  background:rgb(223, 252, 255);
+.bg_gray {
+  background: rgb(223, 252, 255);
 }
-.bg_orange{
+.bg_orange {
   background: rgb(252, 213, 196);
 }
-.bg_purple{
-  background:rgb(250, 199, 250)
+.bg_purple {
+  background: rgb(250, 199, 250);
 }
-.border_3{
+.border_3 {
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
   border-bottom-right-radius: 15px;
 }
-.w_1000{
+.w_1000 {
   width: 1000px;
 }
-.w_600{
+.w_600 {
   width: 600px;
 }
-.w_500{
+.w_500 {
   width: 500px;
 }
-.h_500{
+.h_500 {
   height: 600px;
 }
-.card_bg_color{
-  background:rgb(234, 249, 255)
+.card_bg_color {
+  background: rgb(234, 249, 255);
 }
-@media screen and (max-width : 900px){
-  .fs_md_40{
+@media screen and (max-width: 990px) {
+  .fs_md_40 {
     font-size: 40px;
   }
-  .h_md_500{
-    height: 500px;
+  .fs_md_33 {
+    font-size: 33px;
   }
-  .w_md_300{
-    width: 300px;
+  .fs_md_16 {
+    font-size: 16px;
   }
-  .w_md_400{
-    width: 400px;
-  }
-   }
-@media screen and (max-width : 360px){
-  .fs_sm_14{
-    font-size: 14px;
-  }
-  .fs_sm_18{
-    font-size: 18px;
-  }
-  .fs_sm_15{
-    font-size: 15px;
-  }
-  .fs_sm_30{
-    font-size: 30px;
-  }
-  .w_sm_100{
-    width: 200px;
-  }
-  .w_sm_300{
-    width: 300px;
-  }
-  .h_sm_290{
+  .h_md_300 {
     height: 300px;
   }
-   }
+  .w_md_300 {
+    width: 300px;
+  }
+  .w_md_400 {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .fs_sm_14 {
+    font-size: 14px;
+  }
+  .fs_sm_18 {
+    font-size: 18px;
+  }
+  .fs_sm_15 {
+    font-size: 15px;
+  }
+  .fs_sm_30 {
+    font-size: 30px;
+  }
+  .w_sm_100 {
+    width: 200px;
+  }
+  
+  .w_sm_300 {
+    width: 300px;
+  }
+  .h_sm_200 {
+    height: 200px;
+  }
+}
+@media screen and ((min-width: 992px )and (max-width:1100px)) {
+  .w_lg_380 {
+    width: 380px;
+  }
+  .h_lg_450 {
+    height: 450px;
+  }
+}
+@media screen and ((min-width: 560px) and (max-width:750px)) {
+  .image-center {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media screen and (max-width:550px){
+  .image-sm-center {
+    display: flex;
+    justify-content: center;
+  }
+  .w_sm_90 {
+    width: 350px;
+  }
+}
